@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 6402062
  * @summary Tests MatteBorderUIResource encoding
- * @run main/othervm -Djava.security.manager=allow javax_swing_plaf_BorderUIResource_MatteBorderUIResource
+ * @run main/othervm javax_swing_plaf_BorderUIResource_MatteBorderUIResource
  * @author Sergey Malenkov
  */
 
@@ -34,7 +34,7 @@ import javax.swing.plaf.BorderUIResource.MatteBorderUIResource;
 
 public final class javax_swing_plaf_BorderUIResource_MatteBorderUIResource extends AbstractTest<MatteBorderUIResource> {
     public static void main(String[] args) {
-        new javax_swing_plaf_BorderUIResource_MatteBorderUIResource().test(true);
+        new javax_swing_plaf_BorderUIResource_MatteBorderUIResource().test();
     }
 
     protected MatteBorderUIResource getObject() {
